assets/stylesheets/mainpage.css
.content-container {
  border: 1px dashed black;
  background-image: url(../../assets/images/splash.jpg);
  background-size: 720px 500px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  min-height: 500px;
}


h1 {
  font-family: 'Press Start 2P';
  color: magenta;
  font-size: 40px;
  width: 100%;
  text-align: center;
  margin-bottom: -30px;
  margin-top: 10px;
   -webkit-animation:colorchange 25s infinite alternate;
}

@-webkit-keyframes colorchange {
      0% {

        color: white;
      }

      5% {

        color: black;
      }

      20% {

        color: crimson;
      }

      30% {

        color: tomato;
      }

      40% {

        color: #d35400;
      }

      50% {

        color: #34495e;
      }

      60% {

        color: tomato;
      }

      70% {

        color: white;
      }
      80% {

        color: #f1c40f;
      }

      90% {

        color: #2980b9;
      }

      100% {

        color: tomato;
      }
    }

.icons {
  display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 10px;
    margin-top: 5px;
    height: 135px;
    padding: 5px;
    background-color: antiquewhite;
    border-radius: 10px;
}

#linker {
  cursor: pointer;
}

.game-viewport {
  width: 604px;
  height: 404px;
  display: flex;
  flex-direction: row;
}

#linker:hover {
  color: magenta;
}

/*.bg-cutter {
  width: 1200px;
  display: flex;
  flex-direction: row;
  position: relative;
  overflow: hidden;
}*/

/*#canvas-bg {
  width: 1200px;
  height: 400px;
  background-image: url("../images/maxresdefault.jpg");
  transform: translate3d(0, 0, 0);
  animation: moveSlideshow 12s linear infinite;
  overflow: hidden;
  position: relative;
  right: 600px;
}


@keyframes moveSlideshow {
  100% {
    transform: translateX(33.3333%);
  }
}*/


#canvas {
  max-width: 600px;
  max-height: 400px;
  border: 2px solid white;
  position: absolute;
}
#canvas-UI {
  max-width: 600px;
  max-height: 400px;
  border: 2px solid white;
  position: absolute;
}
#canvas-BG {
  max-width: 600px;
  max-height: 400px;
  border: 2px solid white;
  position: absolute;
}

